tests/A2/accept/ifStat.ul
boolean foo(){
    return true;
}

void main(){
    if(foo()){
        println "true";
    }
}