tests/A2/reject/badSub.ul
void main(){
    boolean t;
    boolean f;

    f = false;

    t = true;

    t = t-f;
}